<resources>
    <string name="app_name">My Class Schedule</string>
    <string name="title_home">Home</string>
    <string name="title_classes">Classes</string>
    <string name="title_favorites">Favorites</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_settings">Настройки</string>
    <string name="title_userInfo">Пользователь</string>
    <string name="title_users">Контакты</string>
    <string name="title_search">Поиск</string>
    <string name="open_in">Open in</string>
    <string name="tv_title_text">Заголовок таймера</string>
    <string name="tv_label_days_text">Дни</string>
    <string name="tv_label_hours_text">Часы</string>
    <string name="tv_label_minutes_text">Минуты</string>
    <string name="menu_search_title">Найти</string>
    <string name="menu_settings_title">Настройки</string>
    <string name="menu_user_info_title">Профиль</string>
    <string name="base_user_greeting">Hi, Mike!</string>
    <string name="classes_default_title">Classes</string>
</resources>